deploy: 716fa8e122c1ad630a8c25318d505b08079750db

--- a/easypost.html
+++ b/easypost.html
@@ -46,7 +46,7 @@
                     <li><a href="easypost/pickup_rate.html">pickup_rate</a></li>
                     <li><a href="easypost/postage_label.html">postage_label</a></li>
                     <li><a href="easypost/rate.html">rate</a></li>
-                    <li><a href="easypost/referral.html">referral</a></li>
+                    <li><a href="easypost/referral_customer.html">referral_customer</a></li>
                     <li><a href="easypost/refund.html">refund</a></li>
                     <li><a href="easypost/report.html">report</a></li>
                     <li><a href="easypost/requestor.html">requestor</a></li>
@@ -105,7 +105,7 @@ easypost    </h1>
 </span><span id="L-19"><a href="#L-19"><span class="linenos">19</span></a><span class="kn">from</span> <span class="nn">easypost.pickup_rate</span> <span class="kn">import</span> <span class="n">PickupRate</span>
 </span><span id="L-20"><a href="#L-20"><span class="linenos">20</span></a><span class="kn">from</span> <span class="nn">easypost.postage_label</span> <span class="kn">import</span> <span class="n">PostageLabel</span>
 </span><span id="L-21"><a href="#L-21"><span class="linenos">21</span></a><span class="kn">from</span> <span class="nn">easypost.rate</span> <span class="kn">import</span> <span class="n">Rate</span>
-</span><span id="L-22"><a href="#L-22"><span class="linenos">22</span></a><span class="kn">from</span> <span class="nn">easypost.referral</span> <span class="kn">import</span> <span class="n">Referral</span>
+</span><span id="L-22"><a href="#L-22"><span class="linenos">22</span></a><span class="kn">from</span> <span class="nn">easypost.referral_customer</span> <span class="kn">import</span> <span class="n">ReferralCustomer</span>
 </span><span id="L-23"><a href="#L-23"><span class="linenos">23</span></a><span class="kn">from</span> <span class="nn">easypost.refund</span> <span class="kn">import</span> <span class="n">Refund</span>
 </span><span id="L-24"><a href="#L-24"><span class="linenos">24</span></a><span class="kn">from</span> <span class="nn">easypost.report</span> <span class="kn">import</span> <span class="n">Report</span>
 </span><span id="L-25"><a href="#L-25"><span class="linenos">25</span></a><span class="kn">from</span> <span class="nn">easypost.scanform</span> <span class="kn">import</span> <span class="n">ScanForm</span>
