--- a/easypost/beta.html
+++ b/easypost/beta.html
@@ -31,7 +31,7 @@
             <ul>
                     <li><a href="beta/carrier_metadata.html">carrier_metadata</a></li>
                     <li><a href="beta/rate.html">rate</a></li>
-                    <li><a href="beta/referral.html">referral</a></li>
+                    <li><a href="beta/referral_customer.html">referral_customer</a></li>
             </ul>
 
 
@@ -56,7 +56,7 @@
                         <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos">1</span></a><span class="c1"># flake8: noqa</span>
 </span><span id="L-2"><a href="#L-2"><span class="linenos">2</span></a><span class="kn">from</span> <span class="nn">easypost.beta.carrier_metadata</span> <span class="kn">import</span> <span class="n">CarrierMetadata</span>
 </span><span id="L-3"><a href="#L-3"><span class="linenos">3</span></a><span class="kn">from</span> <span class="nn">easypost.beta.rate</span> <span class="kn">import</span> <span class="n">Rate</span>
-</span><span id="L-4"><a href="#L-4"><span class="linenos">4</span></a><span class="kn">from</span> <span class="nn">easypost.beta.referral</span> <span class="kn">import</span> <span class="n">Referral</span>
+</span><span id="L-4"><a href="#L-4"><span class="linenos">4</span></a><span class="kn">from</span> <span class="nn">easypost.beta.referral_customer</span> <span class="kn">import</span> <span class="n">ReferralCustomer</span>
 </span></pre></div>
 
 
