--- a/easypost/constant.html
+++ b/easypost/constant.html
@@ -53,11 +53,12 @@
 
                         <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos">1</span></a><span class="n">SUPPORT_EMAIL</span> <span class="o">=</span> <span class="s2">&quot;support@easypost.com&quot;</span>
 </span><span id="L-2"><a href="#L-2"><span class="linenos">2</span></a><span class="n">TIMEOUT</span> <span class="o">=</span> <span class="mi">60</span>
-</span><span id="L-3"><a href="#L-3"><span class="linenos">3</span></a>
-</span><span id="L-4"><a href="#L-4"><span class="linenos">4</span></a><span class="n">_CARRIER_ACCOUNT_TYPES_WITH_CUSTOM_WORKFLOWS</span> <span class="o">=</span> <span class="p">[</span>
-</span><span id="L-5"><a href="#L-5"><span class="linenos">5</span></a>    <span class="s2">&quot;FedexAccount&quot;</span><span class="p">,</span>
-</span><span id="L-6"><a href="#L-6"><span class="linenos">6</span></a>    <span class="s2">&quot;UpsAccount&quot;</span><span class="p">,</span>
-</span><span id="L-7"><a href="#L-7"><span class="linenos">7</span></a><span class="p">]</span>
+</span><span id="L-3"><a href="#L-3"><span class="linenos">3</span></a><span class="n">API_BASE</span> <span class="o">=</span> <span class="s2">&quot;https://api.easypost.com/v2&quot;</span>
+</span><span id="L-4"><a href="#L-4"><span class="linenos">4</span></a>
+</span><span id="L-5"><a href="#L-5"><span class="linenos">5</span></a><span class="n">_CARRIER_ACCOUNT_TYPES_WITH_CUSTOM_WORKFLOWS</span> <span class="o">=</span> <span class="p">[</span>
+</span><span id="L-6"><a href="#L-6"><span class="linenos">6</span></a>    <span class="s2">&quot;FedexAccount&quot;</span><span class="p">,</span>
+</span><span id="L-7"><a href="#L-7"><span class="linenos">7</span></a>    <span class="s2">&quot;UpsAccount&quot;</span><span class="p">,</span>
+</span><span id="L-8"><a href="#L-8"><span class="linenos">8</span></a><span class="p">]</span>
 </span></pre></div>
 
 
