--- a/easypost/services/address_service.html
+++ b/easypost/services/address_service.html
@@ -87,7 +87,7 @@
 </span><span id="L-7"><a href="#L-7"><span class="linenos"> 7</span></a><span class="p">)</span>
 </span><span id="L-8"><a href="#L-8"><span class="linenos"> 8</span></a>
 </span><span id="L-9"><a href="#L-9"><span class="linenos"> 9</span></a><span class="kn">from</span> <span class="nn">easypost.easypost_object</span> <span class="kn">import</span> <span class="n">convert_to_easypost_object</span>
-</span><span id="L-10"><a href="#L-10"><span class="linenos">10</span></a><span class="kn">from</span> <span class="nn">easypost.models.address</span> <span class="kn">import</span> <span class="n">Address</span>
+</span><span id="L-10"><a href="#L-10"><span class="linenos">10</span></a><span class="kn">from</span> <span class="nn">easypost.models</span> <span class="kn">import</span> <span class="n">Address</span>
 </span><span id="L-11"><a href="#L-11"><span class="linenos">11</span></a><span class="kn">from</span> <span class="nn">easypost.requestor</span> <span class="kn">import</span> <span class="p">(</span>
 </span><span id="L-12"><a href="#L-12"><span class="linenos">12</span></a>    <span class="n">RequestMethod</span><span class="p">,</span>
 </span><span id="L-13"><a href="#L-13"><span class="linenos">13</span></a>    <span class="n">Requestor</span><span class="p">,</span>
