--- a/easypost/services/insurance_service.html
+++ b/easypost/services/insurance_service.html
@@ -79,7 +79,7 @@
 </span><span id="L-5"><a href="#L-5"><span class="linenos"> 5</span></a>    <span class="n">Optional</span><span class="p">,</span>
 </span><span id="L-6"><a href="#L-6"><span class="linenos"> 6</span></a><span class="p">)</span>
 </span><span id="L-7"><a href="#L-7"><span class="linenos"> 7</span></a>
-</span><span id="L-8"><a href="#L-8"><span class="linenos"> 8</span></a><span class="kn">from</span> <span class="nn">easypost.models.insurance</span> <span class="kn">import</span> <span class="n">Insurance</span>
+</span><span id="L-8"><a href="#L-8"><span class="linenos"> 8</span></a><span class="kn">from</span> <span class="nn">easypost.models</span> <span class="kn">import</span> <span class="n">Insurance</span>
 </span><span id="L-9"><a href="#L-9"><span class="linenos"> 9</span></a><span class="kn">from</span> <span class="nn">easypost.services.base_service</span> <span class="kn">import</span> <span class="n">BaseService</span>
 </span><span id="L-10"><a href="#L-10"><span class="linenos">10</span></a>
 </span><span id="L-11"><a href="#L-11"><span class="linenos">11</span></a>
