--- a/easypost/services/rate_service.html
+++ b/easypost/services/rate_service.html
@@ -63,7 +63,7 @@
 
                         <label class="view-source-button" for="mod-rate_service-view-source"><span>View Source</span></label>
 
-                        <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos"> 1</span></a><span class="kn">from</span> <span class="nn">easypost.models.rate</span> <span class="kn">import</span> <span class="n">Rate</span>
+                        <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos"> 1</span></a><span class="kn">from</span> <span class="nn">easypost.models</span> <span class="kn">import</span> <span class="n">Rate</span>
 </span><span id="L-2"><a href="#L-2"><span class="linenos"> 2</span></a><span class="kn">from</span> <span class="nn">easypost.services.base_service</span> <span class="kn">import</span> <span class="n">BaseService</span>
 </span><span id="L-3"><a href="#L-3"><span class="linenos"> 3</span></a>
 </span><span id="L-4"><a href="#L-4"><span class="linenos"> 4</span></a>
