--- a/easypost/services/webhook_service.html
+++ b/easypost/services/webhook_service.html
@@ -80,7 +80,7 @@
 </span><span id="L-3"><a href="#L-3"><span class="linenos"> 3</span></a>    <span class="n">List</span><span class="p">,</span>
 </span><span id="L-4"><a href="#L-4"><span class="linenos"> 4</span></a><span class="p">)</span>
 </span><span id="L-5"><a href="#L-5"><span class="linenos"> 5</span></a>
-</span><span id="L-6"><a href="#L-6"><span class="linenos"> 6</span></a><span class="kn">from</span> <span class="nn">easypost.models.webhook</span> <span class="kn">import</span> <span class="n">Webhook</span>
+</span><span id="L-6"><a href="#L-6"><span class="linenos"> 6</span></a><span class="kn">from</span> <span class="nn">easypost.models</span> <span class="kn">import</span> <span class="n">Webhook</span>
 </span><span id="L-7"><a href="#L-7"><span class="linenos"> 7</span></a><span class="kn">from</span> <span class="nn">easypost.services.base_service</span> <span class="kn">import</span> <span class="n">BaseService</span>
 </span><span id="L-8"><a href="#L-8"><span class="linenos"> 8</span></a>
 </span><span id="L-9"><a href="#L-9"><span class="linenos"> 9</span></a>
