deploy: df93ed774e4250c3d1b708e3cf5a3ea82c4ffc11

--- a/easypost/models/brand.html
+++ b/easypost/models/brand.html
@@ -92,8 +92,7 @@
                 <dd id="Brand.get" class="function"><a href="../easypost_object.html#EasyPostObject.get">get</a></dd>
                 <dd id="Brand.setdefault" class="function"><a href="../easypost_object.html#EasyPostObject.setdefault">setdefault</a></dd>
                 <dd id="Brand.construct_from" class="function"><a href="../easypost_object.html#EasyPostObject.construct_from">construct_from</a></dd>
-                <dd id="Brand.refresh_from" class="function"><a href="../easypost_object.html#EasyPostObject.refresh_from">refresh_from</a></dd>
-                <dd id="Brand.flatten_unsaved" class="function"><a href="../easypost_object.html#EasyPostObject.flatten_unsaved">flatten_unsaved</a></dd>
+                <dd id="Brand.convert_each_value" class="function"><a href="../easypost_object.html#EasyPostObject.convert_each_value">convert_each_value</a></dd>
                 <dd id="Brand.to_json" class="function"><a href="../easypost_object.html#EasyPostObject.to_json">to_json</a></dd>
                 <dd id="Brand.to_dict" class="function"><a href="../easypost_object.html#EasyPostObject.to_dict">to_dict</a></dd>
 
