--- a/easypost/models/shipment.html
+++ b/easypost/models/shipment.html
@@ -134,8 +134,7 @@
                 <dd id="Shipment.get" class="function"><a href="../easypost_object.html#EasyPostObject.get">get</a></dd>
                 <dd id="Shipment.setdefault" class="function"><a href="../easypost_object.html#EasyPostObject.setdefault">setdefault</a></dd>
                 <dd id="Shipment.construct_from" class="function"><a href="../easypost_object.html#EasyPostObject.construct_from">construct_from</a></dd>
-                <dd id="Shipment.refresh_from" class="function"><a href="../easypost_object.html#EasyPostObject.refresh_from">refresh_from</a></dd>
-                <dd id="Shipment.flatten_unsaved" class="function"><a href="../easypost_object.html#EasyPostObject.flatten_unsaved">flatten_unsaved</a></dd>
+                <dd id="Shipment.convert_each_value" class="function"><a href="../easypost_object.html#EasyPostObject.convert_each_value">convert_each_value</a></dd>
                 <dd id="Shipment.to_json" class="function"><a href="../easypost_object.html#EasyPostObject.to_json">to_json</a></dd>
                 <dd id="Shipment.to_dict" class="function"><a href="../easypost_object.html#EasyPostObject.to_dict">to_dict</a></dd>
 
