--- a/easypost/models/scan_form.html
+++ b/easypost/models/scan_form.html
@@ -92,8 +92,7 @@
                 <dd id="ScanForm.get" class="function"><a href="../easypost_object.html#EasyPostObject.get">get</a></dd>
                 <dd id="ScanForm.setdefault" class="function"><a href="../easypost_object.html#EasyPostObject.setdefault">setdefault</a></dd>
                 <dd id="ScanForm.construct_from" class="function"><a href="../easypost_object.html#EasyPostObject.construct_from">construct_from</a></dd>
-                <dd id="ScanForm.refresh_from" class="function"><a href="../easypost_object.html#EasyPostObject.refresh_from">refresh_from</a></dd>
-                <dd id="ScanForm.flatten_unsaved" class="function"><a href="../easypost_object.html#EasyPostObject.flatten_unsaved">flatten_unsaved</a></dd>
+                <dd id="ScanForm.convert_each_value" class="function"><a href="../easypost_object.html#EasyPostObject.convert_each_value">convert_each_value</a></dd>
                 <dd id="ScanForm.to_json" class="function"><a href="../easypost_object.html#EasyPostObject.to_json">to_json</a></dd>
                 <dd id="ScanForm.to_dict" class="function"><a href="../easypost_object.html#EasyPostObject.to_dict">to_dict</a></dd>
 
