deploy: 5980c5f2e08da48f172f1f80eef92d736068c173

--- a/easypost.html
+++ b/easypost.html
@@ -27,7 +27,7 @@
                     <li><a href="easypost/constant.html">constant</a></li>
                     <li><a href="easypost/easypost_client.html">easypost_client</a></li>
                     <li><a href="easypost/easypost_object.html">easypost_object</a></li>
-                    <li><a href="easypost/error.html">error</a></li>
+                    <li><a href="easypost/errors.html">errors</a></li>
                     <li><a href="easypost/models.html">models</a></li>
                     <li><a href="easypost/requestor.html">requestor</a></li>
                     <li><a href="easypost/services.html">services</a></li>
