--- a/easypost/services/beta_rate_service.html
+++ b/easypost/services/beta_rate_service.html
@@ -131,7 +131,7 @@
 </span></pre></div>
 
 
-            <div class="docstring"><p>The base service that all other services inherit.</p>
+            <div class="docstring"><p>The base service that all other services inherit containing shared logic.</p>
 </div>
 
 
