--- a/easypost.html
+++ b/easypost.html
@@ -59,22 +59,23 @@ easypost    </h1>
 
                         <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos"> 1</span></a><span class="c1"># flake8: noqa</span>
 </span><span id="L-2"><a href="#L-2"><span class="linenos"> 2</span></a><span class="kn">from</span> <span class="nn">easypost.constant</span> <span class="kn">import</span> <span class="p">(</span>
-</span><span id="L-3"><a href="#L-3"><span class="linenos"> 3</span></a>    <span class="n">VERSION</span><span class="p">,</span>
-</span><span id="L-4"><a href="#L-4"><span class="linenos"> 4</span></a>    <span class="n">VERSION_INFO</span><span class="p">,</span>
-</span><span id="L-5"><a href="#L-5"><span class="linenos"> 5</span></a><span class="p">)</span>
-</span><span id="L-6"><a href="#L-6"><span class="linenos"> 6</span></a><span class="kn">from</span> <span class="nn">easypost.easypost_client</span> <span class="kn">import</span> <span class="n">EasyPostClient</span>
-</span><span id="L-7"><a href="#L-7"><span class="linenos"> 7</span></a><span class="kn">from</span> <span class="nn">easypost.util</span> <span class="kn">import</span> <span class="p">(</span>
-</span><span id="L-8"><a href="#L-8"><span class="linenos"> 8</span></a>    <span class="n">get_lowest_object_rate</span><span class="p">,</span>
-</span><span id="L-9"><a href="#L-9"><span class="linenos"> 9</span></a>    <span class="n">get_lowest_smart_rate</span><span class="p">,</span>
-</span><span id="L-10"><a href="#L-10"><span class="linenos">10</span></a>    <span class="n">get_lowest_stateless_rate</span><span class="p">,</span>
-</span><span id="L-11"><a href="#L-11"><span class="linenos">11</span></a>    <span class="n">receive_event</span><span class="p">,</span>
-</span><span id="L-12"><a href="#L-12"><span class="linenos">12</span></a>    <span class="n">validate_webhook</span><span class="p">,</span>
-</span><span id="L-13"><a href="#L-13"><span class="linenos">13</span></a><span class="p">)</span>
-</span><span id="L-14"><a href="#L-14"><span class="linenos">14</span></a>
+</span><span id="L-3"><a href="#L-3"><span class="linenos"> 3</span></a>    <span class="n">AUTHOR</span><span class="p">,</span>
+</span><span id="L-4"><a href="#L-4"><span class="linenos"> 4</span></a>    <span class="n">VERSION</span><span class="p">,</span>
+</span><span id="L-5"><a href="#L-5"><span class="linenos"> 5</span></a>    <span class="n">VERSION_INFO</span><span class="p">,</span>
+</span><span id="L-6"><a href="#L-6"><span class="linenos"> 6</span></a><span class="p">)</span>
+</span><span id="L-7"><a href="#L-7"><span class="linenos"> 7</span></a><span class="kn">from</span> <span class="nn">easypost.easypost_client</span> <span class="kn">import</span> <span class="n">EasyPostClient</span>
+</span><span id="L-8"><a href="#L-8"><span class="linenos"> 8</span></a><span class="kn">from</span> <span class="nn">easypost.util</span> <span class="kn">import</span> <span class="p">(</span>
+</span><span id="L-9"><a href="#L-9"><span class="linenos"> 9</span></a>    <span class="n">get_lowest_object_rate</span><span class="p">,</span>
+</span><span id="L-10"><a href="#L-10"><span class="linenos">10</span></a>    <span class="n">get_lowest_smart_rate</span><span class="p">,</span>
+</span><span id="L-11"><a href="#L-11"><span class="linenos">11</span></a>    <span class="n">get_lowest_stateless_rate</span><span class="p">,</span>
+</span><span id="L-12"><a href="#L-12"><span class="linenos">12</span></a>    <span class="n">receive_event</span><span class="p">,</span>
+</span><span id="L-13"><a href="#L-13"><span class="linenos">13</span></a>    <span class="n">validate_webhook</span><span class="p">,</span>
+</span><span id="L-14"><a href="#L-14"><span class="linenos">14</span></a><span class="p">)</span>
 </span><span id="L-15"><a href="#L-15"><span class="linenos">15</span></a>
-</span><span id="L-16"><a href="#L-16"><span class="linenos">16</span></a><span class="n">__author__</span> <span class="o">=</span> <span class="s2">&quot;EasyPost &lt;oss@easypost.com&gt;&quot;</span>
-</span><span id="L-17"><a href="#L-17"><span class="linenos">17</span></a><span class="n">__version__</span> <span class="o">=</span> <span class="n">VERSION</span>
-</span><span id="L-18"><a href="#L-18"><span class="linenos">18</span></a><span class="n">version_info</span> <span class="o">=</span> <span class="n">VERSION_INFO</span>
+</span><span id="L-16"><a href="#L-16"><span class="linenos">16</span></a>
+</span><span id="L-17"><a href="#L-17"><span class="linenos">17</span></a><span class="n">__author__</span> <span class="o">=</span> <span class="n">AUTHOR</span>
+</span><span id="L-18"><a href="#L-18"><span class="linenos">18</span></a><span class="n">__version__</span> <span class="o">=</span> <span class="n">VERSION</span>
+</span><span id="L-19"><a href="#L-19"><span class="linenos">19</span></a><span class="n">version_info</span> <span class="o">=</span> <span class="n">VERSION_INFO</span>
 </span></pre></div>
 
 
