deploy: 7f5fe803e934d497e890cbaa1b960a0220e77790

--- a/easypost/constant.html
+++ b/easypost/constant.html
@@ -86,8 +86,9 @@
 </span><span id="L-33"><a href="#L-33"><span class="linenos">33</span></a><span class="n">_TEST_FAILED_INTENTIONALLY_ERROR</span> <span class="o">=</span> <span class="s2">&quot;Test failed intentionally.&quot;</span>
 </span><span id="L-34"><a href="#L-34"><span class="linenos">34</span></a><span class="n">_CARRIER_ACCOUNT_TYPES_WITH_CUSTOM_WORKFLOWS</span> <span class="o">=</span> <span class="p">[</span>
 </span><span id="L-35"><a href="#L-35"><span class="linenos">35</span></a>    <span class="s2">&quot;FedexAccount&quot;</span><span class="p">,</span>
-</span><span id="L-36"><a href="#L-36"><span class="linenos">36</span></a>    <span class="s2">&quot;UpsAccount&quot;</span><span class="p">,</span>
-</span><span id="L-37"><a href="#L-37"><span class="linenos">37</span></a><span class="p">]</span>
+</span><span id="L-36"><a href="#L-36"><span class="linenos">36</span></a>    <span class="s2">&quot;FedexSmartpostAccount&quot;</span><span class="p">,</span>
+</span><span id="L-37"><a href="#L-37"><span class="linenos">37</span></a>    <span class="s2">&quot;UpsAccount&quot;</span><span class="p">,</span>
+</span><span id="L-38"><a href="#L-38"><span class="linenos">38</span></a><span class="p">]</span>
 </span></pre></div>
 
 
