deploy: 12fb76765c67c35e07f2fba9b106c0585614b151

--- a/easypost/constant.html
+++ b/easypost/constant.html
@@ -79,16 +79,17 @@
 </span><span id="L-26"><a href="#L-26"><span class="linenos">26</span></a><span class="n">NO_BILLING_ERROR</span> <span class="o">=</span> <span class="s2">&quot;Billing has not been setup for this user. Please add a payment method.&quot;</span>
 </span><span id="L-27"><a href="#L-27"><span class="linenos">27</span></a><span class="n">NO_MORE_PAGES_ERROR</span> <span class="o">=</span> <span class="s2">&quot;There are no more pages to retrieve.&quot;</span>
 </span><span id="L-28"><a href="#L-28"><span class="linenos">28</span></a><span class="n">NO_RATES_ERROR</span> <span class="o">=</span> <span class="s2">&quot;No rates found.&quot;</span>
-</span><span id="L-29"><a href="#L-29"><span class="linenos">29</span></a><span class="n">SEND_STRIPE_DETAILS_ERROR</span> <span class="o">=</span> <span class="s2">&quot;Could not send card details to Stripe, please try again later.&quot;</span>
-</span><span id="L-30"><a href="#L-30"><span class="linenos">30</span></a><span class="n">TIMEOUT_ERROR</span> <span class="o">=</span> <span class="s2">&quot;Request timed out.&quot;</span>
-</span><span id="L-31"><a href="#L-31"><span class="linenos">31</span></a>
-</span><span id="L-32"><a href="#L-32"><span class="linenos">32</span></a><span class="c1"># Internal constants (user&#39;s should not use these)</span>
-</span><span id="L-33"><a href="#L-33"><span class="linenos">33</span></a><span class="n">_TEST_FAILED_INTENTIONALLY_ERROR</span> <span class="o">=</span> <span class="s2">&quot;Test failed intentionally.&quot;</span>
-</span><span id="L-34"><a href="#L-34"><span class="linenos">34</span></a><span class="n">_CARRIER_ACCOUNT_TYPES_WITH_CUSTOM_WORKFLOWS</span> <span class="o">=</span> <span class="p">[</span>
-</span><span id="L-35"><a href="#L-35"><span class="linenos">35</span></a>    <span class="s2">&quot;FedexAccount&quot;</span><span class="p">,</span>
-</span><span id="L-36"><a href="#L-36"><span class="linenos">36</span></a>    <span class="s2">&quot;FedexSmartpostAccount&quot;</span><span class="p">,</span>
-</span><span id="L-37"><a href="#L-37"><span class="linenos">37</span></a>    <span class="s2">&quot;UpsAccount&quot;</span><span class="p">,</span>
-</span><span id="L-38"><a href="#L-38"><span class="linenos">38</span></a><span class="p">]</span>
+</span><span id="L-29"><a href="#L-29"><span class="linenos">29</span></a><span class="n">NO_USER_FOUND</span> <span class="o">=</span> <span class="s2">&quot;No user found with the given id.&quot;</span>
+</span><span id="L-30"><a href="#L-30"><span class="linenos">30</span></a><span class="n">SEND_STRIPE_DETAILS_ERROR</span> <span class="o">=</span> <span class="s2">&quot;Could not send card details to Stripe, please try again later.&quot;</span>
+</span><span id="L-31"><a href="#L-31"><span class="linenos">31</span></a><span class="n">TIMEOUT_ERROR</span> <span class="o">=</span> <span class="s2">&quot;Request timed out.&quot;</span>
+</span><span id="L-32"><a href="#L-32"><span class="linenos">32</span></a>
+</span><span id="L-33"><a href="#L-33"><span class="linenos">33</span></a><span class="c1"># Internal constants (user&#39;s should not use these)</span>
+</span><span id="L-34"><a href="#L-34"><span class="linenos">34</span></a><span class="n">_TEST_FAILED_INTENTIONALLY_ERROR</span> <span class="o">=</span> <span class="s2">&quot;Test failed intentionally.&quot;</span>
+</span><span id="L-35"><a href="#L-35"><span class="linenos">35</span></a><span class="n">_CARRIER_ACCOUNT_TYPES_WITH_CUSTOM_WORKFLOWS</span> <span class="o">=</span> <span class="p">[</span>
+</span><span id="L-36"><a href="#L-36"><span class="linenos">36</span></a>    <span class="s2">&quot;FedexAccount&quot;</span><span class="p">,</span>
+</span><span id="L-37"><a href="#L-37"><span class="linenos">37</span></a>    <span class="s2">&quot;FedexSmartpostAccount&quot;</span><span class="p">,</span>
+</span><span id="L-38"><a href="#L-38"><span class="linenos">38</span></a>    <span class="s2">&quot;UpsAccount&quot;</span><span class="p">,</span>
+</span><span id="L-39"><a href="#L-39"><span class="linenos">39</span></a><span class="p">]</span>
 </span></pre></div>
 
 
