deploy: 02b474d42c307f006872ca2a3e0beb9a00a3a8d7

--- a/easypost/constant.html
+++ b/easypost/constant.html
@@ -88,9 +88,14 @@
 </span><span id="L-35"><a href="#L-35"><span class="linenos">35</span></a><span class="n">_CARRIER_ACCOUNT_TYPES_WITH_CUSTOM_WORKFLOWS</span> <span class="o">=</span> <span class="p">[</span>
 </span><span id="L-36"><a href="#L-36"><span class="linenos">36</span></a>    <span class="s2">&quot;FedexAccount&quot;</span><span class="p">,</span>
 </span><span id="L-37"><a href="#L-37"><span class="linenos">37</span></a>    <span class="s2">&quot;FedexSmartpostAccount&quot;</span><span class="p">,</span>
-</span><span id="L-38"><a href="#L-38"><span class="linenos">38</span></a>    <span class="s2">&quot;UpsAccount&quot;</span><span class="p">,</span>
-</span><span id="L-39"><a href="#L-39"><span class="linenos">39</span></a><span class="p">]</span>
-</span><span id="L-40"><a href="#L-40"><span class="linenos">40</span></a><span class="n">_FILTERS_KEY</span> <span class="o">=</span> <span class="s2">&quot;filters&quot;</span>
+</span><span id="L-38"><a href="#L-38"><span class="linenos">38</span></a><span class="p">]</span>
+</span><span id="L-39"><a href="#L-39"><span class="linenos">39</span></a><span class="n">_UPS_OAUTH_CARRIER_ACCOUNT_TYPES</span> <span class="o">=</span> <span class="p">[</span>
+</span><span id="L-40"><a href="#L-40"><span class="linenos">40</span></a>    <span class="s2">&quot;UpsAccount&quot;</span><span class="p">,</span>
+</span><span id="L-41"><a href="#L-41"><span class="linenos">41</span></a>    <span class="s2">&quot;UpsMailInnovationsAccount&quot;</span><span class="p">,</span>
+</span><span id="L-42"><a href="#L-42"><span class="linenos">42</span></a>    <span class="s2">&quot;UpsSurepostAccount&quot;</span><span class="p">,</span>
+</span><span id="L-43"><a href="#L-43"><span class="linenos">43</span></a><span class="p">]</span>
+</span><span id="L-44"><a href="#L-44"><span class="linenos">44</span></a><span class="n">_FILTERS_KEY</span> <span class="o">=</span> <span class="s2">&quot;filters&quot;</span>
+</span><span id="L-45"><a href="#L-45"><span class="linenos">45</span></a><span class="n">_EXCLUDED_CLASS_NAMES</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;ups_oauth_registrations&quot;</span><span class="p">]</span>
 </span></pre></div>
 
 
