--- a/easypost/hooks.html
+++ b/easypost/hooks.html
@@ -54,9 +54,9 @@
                         <label class="view-source-button" for="mod-hooks-view-source"><span>View Source</span></label>
 
                         <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos">1</span></a><span class="c1"># flake8: noqa</span>
-</span><span id="L-2"><a href="#L-2"><span class="linenos">2</span></a><span class="kn">from</span> <span class="nn">easypost.hooks.event_hook</span> <span class="kn">import</span> <span class="n">EventHook</span>
-</span><span id="L-3"><a href="#L-3"><span class="linenos">3</span></a><span class="kn">from</span> <span class="nn">easypost.hooks.request_hook</span> <span class="kn">import</span> <span class="n">RequestHook</span>
-</span><span id="L-4"><a href="#L-4"><span class="linenos">4</span></a><span class="kn">from</span> <span class="nn">easypost.hooks.response_hook</span> <span class="kn">import</span> <span class="n">ResponseHook</span>
+</span><span id="L-2"><a href="#L-2"><span class="linenos">2</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">easypost.hooks.event_hook</span><span class="w"> </span><span class="kn">import</span> <span class="n">EventHook</span>
+</span><span id="L-3"><a href="#L-3"><span class="linenos">3</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">easypost.hooks.request_hook</span><span class="w"> </span><span class="kn">import</span> <span class="n">RequestHook</span>
+</span><span id="L-4"><a href="#L-4"><span class="linenos">4</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">easypost.hooks.response_hook</span><span class="w"> </span><span class="kn">import</span> <span class="n">ResponseHook</span>
 </span></pre></div>
 
 
