--- a/easypost.html
+++ b/easypost.html
@@ -59,13 +59,13 @@ easypost    </h1>
                         <label class="view-source-button" for="mod-easypost-view-source"><span>View Source</span></label>
 
                         <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos"> 1</span></a><span class="c1"># flake8: noqa</span>
-</span><span id="L-2"><a href="#L-2"><span class="linenos"> 2</span></a><span class="kn">from</span> <span class="nn">easypost.constant</span> <span class="kn">import</span> <span class="p">(</span>
+</span><span id="L-2"><a href="#L-2"><span class="linenos"> 2</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">easypost.constant</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>
 </span><span id="L-3"><a href="#L-3"><span class="linenos"> 3</span></a>    <span class="n">AUTHOR</span><span class="p">,</span>
 </span><span id="L-4"><a href="#L-4"><span class="linenos"> 4</span></a>    <span class="n">VERSION</span><span class="p">,</span>
 </span><span id="L-5"><a href="#L-5"><span class="linenos"> 5</span></a>    <span class="n">VERSION_INFO</span><span class="p">,</span>
 </span><span id="L-6"><a href="#L-6"><span class="linenos"> 6</span></a><span class="p">)</span>
-</span><span id="L-7"><a href="#L-7"><span class="linenos"> 7</span></a><span class="kn">from</span> <span class="nn">easypost.easypost_client</span> <span class="kn">import</span> <span class="n">EasyPostClient</span>
-</span><span id="L-8"><a href="#L-8"><span class="linenos"> 8</span></a><span class="kn">from</span> <span class="nn">easypost.util</span> <span class="kn">import</span> <span class="p">(</span>
+</span><span id="L-7"><a href="#L-7"><span class="linenos"> 7</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">easypost.easypost_client</span><span class="w"> </span><span class="kn">import</span> <span class="n">EasyPostClient</span>
+</span><span id="L-8"><a href="#L-8"><span class="linenos"> 8</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">easypost.util</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>
 </span><span id="L-9"><a href="#L-9"><span class="linenos"> 9</span></a>    <span class="n">get_lowest_object_rate</span><span class="p">,</span>
 </span><span id="L-10"><a href="#L-10"><span class="linenos">10</span></a>    <span class="n">get_lowest_smart_rate</span><span class="p">,</span>
 </span><span id="L-11"><a href="#L-11"><span class="linenos">11</span></a>    <span class="n">get_lowest_stateless_rate</span><span class="p">,</span>
