--- a/easypost/errors/general.html
+++ b/easypost/errors/general.html
@@ -58,13 +58,13 @@
                         <label class="view-source-button" for="mod-general-view-source"><span>View Source</span></label>
 
                         <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos">1</span></a><span class="c1"># flake8: noqa</span>
-</span><span id="L-2"><a href="#L-2"><span class="linenos">2</span></a><span class="kn">from</span> <span class="nn">easypost.errors.general.easypost_error</span> <span class="kn">import</span> <span class="n">EasyPostError</span>
-</span><span id="L-3"><a href="#L-3"><span class="linenos">3</span></a><span class="kn">from</span> <span class="nn">easypost.errors.general.end_of_pagination_error</span> <span class="kn">import</span> <span class="n">EndOfPaginationError</span>
-</span><span id="L-4"><a href="#L-4"><span class="linenos">4</span></a><span class="kn">from</span> <span class="nn">easypost.errors.general.filtering_error</span> <span class="kn">import</span> <span class="n">FilteringError</span>
-</span><span id="L-5"><a href="#L-5"><span class="linenos">5</span></a><span class="kn">from</span> <span class="nn">easypost.errors.general.invalid_object_error</span> <span class="kn">import</span> <span class="n">InvalidObjectError</span>
-</span><span id="L-6"><a href="#L-6"><span class="linenos">6</span></a><span class="kn">from</span> <span class="nn">easypost.errors.general.invalid_parameter_error</span> <span class="kn">import</span> <span class="n">InvalidParameterError</span>
-</span><span id="L-7"><a href="#L-7"><span class="linenos">7</span></a><span class="kn">from</span> <span class="nn">easypost.errors.general.missing_parameter_error</span> <span class="kn">import</span> <span class="n">MissingParameterError</span>
-</span><span id="L-8"><a href="#L-8"><span class="linenos">8</span></a><span class="kn">from</span> <span class="nn">easypost.errors.general.signature_verification_error</span> <span class="kn">import</span> <span class="n">SignatureVerificationError</span>
+</span><span id="L-2"><a href="#L-2"><span class="linenos">2</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">easypost.errors.general.easypost_error</span><span class="w"> </span><span class="kn">import</span> <span class="n">EasyPostError</span>
+</span><span id="L-3"><a href="#L-3"><span class="linenos">3</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">easypost.errors.general.end_of_pagination_error</span><span class="w"> </span><span class="kn">import</span> <span class="n">EndOfPaginationError</span>
+</span><span id="L-4"><a href="#L-4"><span class="linenos">4</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">easypost.errors.general.filtering_error</span><span class="w"> </span><span class="kn">import</span> <span class="n">FilteringError</span>
+</span><span id="L-5"><a href="#L-5"><span class="linenos">5</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">easypost.errors.general.invalid_object_error</span><span class="w"> </span><span class="kn">import</span> <span class="n">InvalidObjectError</span>
+</span><span id="L-6"><a href="#L-6"><span class="linenos">6</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">easypost.errors.general.invalid_parameter_error</span><span class="w"> </span><span class="kn">import</span> <span class="n">InvalidParameterError</span>
+</span><span id="L-7"><a href="#L-7"><span class="linenos">7</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">easypost.errors.general.missing_parameter_error</span><span class="w"> </span><span class="kn">import</span> <span class="n">MissingParameterError</span>
+</span><span id="L-8"><a href="#L-8"><span class="linenos">8</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">easypost.errors.general.signature_verification_error</span><span class="w"> </span><span class="kn">import</span> <span class="n">SignatureVerificationError</span>
 </span></pre></div>
 
 
